--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -1,10 +1,13 @@
 <%= form_for @member do |f| %>
-<%= f.label :name %>: 
-<%= f.text_field :name %><br>
-<%= f.label :email %>: 
-<%= f.text_field :email %><br>
-<%= f.label :age %>: 
-<%= f.number_field :age %><br>
-<%= f.label :address %>: 
-<%= f.text_field :address %><br>
-<%= f.submit %>
+    <%= f.label :name %>: 
+    <%= f.text_field :name %><br>
+    <%= f.label :email %>: 
+    <%= f.text_field :email %><br>
+    <%= f.label :age %>: 
+    <%= f.number_field :age %><br>
+    <%= f.label :address %>: 
+    <%= f.text_field :address %><br>
+    <%= f.label :img_url %>: 
+    <%= f.text_field :img_url %><br>
+    <%= f.submit %>
+<% end %>
