adding views to coaches/equipment/gym_reveiws. worked on some of the controllers

--- a/app/views/gyms/show.html.erb
+++ b/app/views/gyms/show.html.erb
@@ -4,6 +4,6 @@
 Coaches:<br>
 <ul>
     <% @gym.coaches.each do |c| %>
-        <li><%= c.name %></li>
+        <li><%= link_to c.name, c %></li>
     <% end %>
 </ul>
