--- a/app/views/gym_reviews/_form.html.erb
+++ b/app/views/gym_reviews/_form.html.erb
@@ -4,9 +4,9 @@
     <%= f.label :rating %>
     <%= f.number_field :rating %><br>
     <%= f.label :content %>
-    <% f.text_area :content %><br>
+    <%= f.text_area :content %><br>
     <% #PLACEHOLDER This form should only be accessed to a user that is currently logged in. Users cannot add a review if they are not registered %>
-    <% f.submit %>
+    <%= f.submit %>
     <% if flash[:errors] %>
         <% flash[:errors].each do |error| %>
             <li><%= error %></li>
