--- a/app/views/gym_reviews/_form.html.erb
+++ b/app/views/gym_reviews/_form.html.erb
@@ -1,10 +1,10 @@
 <%= form_for @gym_review do |f| %>
-    <%= f.label :gyms %>
+    <%= f.label :gym_id %>
     <%= f.collection_select :gym_id, @gyms, :id, :name %><br>
     <%= f.label :rating %>
     <%= f.number_field :rating %><br>
     <%= f.label :content %>
-    <%= f.text_area :content %><br>
+    <% f.text_area :content %><br>
     <% #PLACEHOLDER This form should only be accessed to a user that is currently logged in. Users cannot add a review if they are not registered %>
     <%= f.submit %>
     <% if flash[:errors] %>
