consistent index and show pages and working on nav bar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,6 +20,8 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 25px;
+    position: fixed; 
+
     .logo-container {
       height: 100%;
       width: 70px;
@@ -37,3 +39,6 @@
       }
     }
   }
+.content {
+  margin-top: 10%;
+}
