--- a/app/views/coaches/show.html.erb
+++ b/app/views/coaches/show.html.erb
@@ -1,8 +1,8 @@
 <h1><%= @coach.name %></h1>
-<img src=<% @coach.img_url %>/>
+<img src="<%= @coach.img_url %>">
 <h2><%=pluralize @coach.specialties.count, "Specialty"%>: </h2>
-
+<ul>
 <% @coach.specialties.each do |s| %>
-  <%= s.name %>
-  <br>
+  <li><%= link_to s.name, s %></li>
 <% end %>
+</ul>
