--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -1,6 +1,7 @@
-<h1>List of Equipment</h1>
-
-<% @equipments.each do |e| %>
-  <p><%= e.name %></p>
-  <img src=<%e.img_url%> />
-<% end %>
+<h1>Equipment List</h1>
+<ul>
+  <% @equipments.each do |e| %>
+    <li><img src="<%= e.img_url %>">
+    <h2><%= link_to e.name, e %></h2></li>
+  <% end %>
+</ul>
