--- a/app/views/gyms/show.html.erb
+++ b/app/views/gyms/show.html.erb
@@ -1,9 +1,16 @@
+<img src="<%= @gym.img_url %>">
 <h1><%= @gym.name %></h1>
 <h2><%= @gym.address %></h2>
 <br><br>
-Coaches:<br>
+<h3>Coaches:</h3>
 <ul>
     <% @gym.coaches.each do |c| %>
         <li><%= link_to c.name, c %></li>
+    <% end %>
+</ul>
+<h3>Equipment Available:</h3>
+<ul>
+    <% @gym.equipments.uniq.each do |e| %>
+        <li><%= link_to e.name, e %></li>
     <% end %>
 </ul>
