--- a/app/views/gyms/show.html.erb
+++ b/app/views/gyms/show.html.erb
@@ -7,3 +7,5 @@ Coaches:<br>
         <li><%= link_to c.name, c %></li>
     <% end %>
 </ul>
+
+<%= button_to "Leave a review", new_gym_review_path %>
