--- a/app/views/gym_reviews/_form.html.erb
+++ b/app/views/gym_reviews/_form.html.erb
@@ -1,10 +1,16 @@
 <%= form_for @gym_review do |f| %>
-    <%= f.label :gym_id %>
-    <%= f.collection_select :gym_id, @gyms, :id, :name %><br>
-    <%= f.label :rating %>
-    <%= f.number_field :rating %><br>
-    <%= f.label :content %>
-    <% f.text_area :content %><br>
+    <p>
+        <%= f.label :gym_id %><br>
+        <%= f.collection_select :gym_id, @gyms, :id, :name %>
+    </p>
+    <p>
+        <%= f.label :rating %><br>
+        <%= f.number_field :rating %><br>
+    </p>
+    <p>
+        <%= f.label :content %><br>
+        <%= f.text_area :content %><br>
+    </p>
     <% #PLACEHOLDER This form should only be accessed to a user that is currently logged in. Users cannot add a review if they are not registered %>
     <%= f.submit %>
     <% if flash[:errors] %>
