--- a/app/views/gyms/show.html.erb
+++ b/app/views/gyms/show.html.erb
@@ -1,7 +1,10 @@
 <img src="<%= @gym.img_url %>">
 <h1><%= @gym.name %></h1>
-<h2><%= @gym.address %></h2>
+<h2>Address: <%= @gym.address %></h2>
 <br><br>
+<h3>Rating: <%= @gym.review_rating_average %>(<%= @gym.gym_reviews.count %>)</h3>
+<h3>Members: <%= @gym.memberships_count %></h3>
+<%# <h3>Rating:</h3> %>
 <h3>Coaches:</h3>
 <ul>
     <% @gym.coaches.each do |c| %>
@@ -16,4 +19,4 @@
     <% end %>
 </ul>
 
-<%= button_to "Leave a review", new_gym_review_path %>
+<button><%= link_to "Leave a review", new_gym_review_path%></button>
