--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,12 @@
   <nav>
     <div class='header'>
       <%= link_to "SWOLEMATES", root_path %>
-      <div class='options'>
-         <%= link_to "GYMS", gyms_path %> | 
-         <%= link_to "COACHES", coaches_path %> | 
-         <%= link_to "SIGN IN", signin_path %> | 
-         <%= link_to "SIGN UP", signup_path %> | 
+      <div class='option'>
+        <%= link_to "MY ACCOUNT", @member %>|
+        <%= link_to "GYMS", gyms_path %> | 
+        <%= link_to "COACHES", coaches_path %> | 
+        <%= link_to "SIGN IN", signin_path %> | 
+        <%= link_to "SIGN UP", signup_path %> | 
       </div>
     </div>
   </nav>
