--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -1,19 +1,40 @@
+<% if flash[:error] %>
+    <div style="color: red">
+      <%= flash[:error] %>
+    </div>
+<% end %>
+
 <%= form_for @member do |f| %>
-    <%= f.label :name %>: 
-    <%= f.text_field :name %><br>
-    <%= f.label :email %>: 
-    <%= f.text_field :email %><br>
-    <%= f.label :age %>: 
-    <%= f.number_field :age %><br>
-    <%= f.label :address %>: 
-    <%= f.text_field :address %><br>
-    <%= f.label :img_url %>: 
-    <%= f.text_field :img_url %><br>
-    <%= f.submit %>
-    <% if flash[:errors] %>
-        <% flash[:errors].each do |error| %>
-            <li><%= error %></li>
-        <% end %>
-    <% end %>
+  <p>
+  <%= f.label :name %><br>
+  <%= f.text_field :name %>
+  </p>
+  <p>
+    <%= f.label :email %><br>
+    <%= f.text_field :email %>
+  </p>
+  <p>
+    <%= f.label :age %><br>
+    <%= f.number_field :age %>
+  </p>
+  <p>
+    <%= f.label :address %><br>
+    <%= f.text_field :address %>
+  </p>
+
+  <p>
+    <%= f.label "Image URL" %><br>
+    <%= f.text_field :img_url %>
+  </p>
+
+  <p>
+    <%= f.label :password %><br>
+    <%= f.password_field :password %>
+  </p>
+  <p>
+    <%= f.label :password_confirmation %><br>
+    <%= f.password_field :password_confirmation %>
+  </p>
+  <%= f.submit %>
 <% end %>
 
