seeded relevant data, consistent image sizing across pages

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,6 +39,6 @@
       }
     }
   }
-.content {
-  margin-top: 10%;
-}
+  body {
+    scroll-padding-top: 70px; /* height of sticky header */
+  }
