--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @equipment.name %></h1>
-<img src="<%= @equipment.img_url %>">
+<img src="<%= @equipment.img_url %>" height=400>
 
 <h2>Found at these gyms:</h2>
 <ul>
