--- a/app/views/gyms/show.html.erb
+++ b/app/views/gyms/show.html.erb
@@ -1,7 +1,7 @@
-<img src="<%= @gym.img_url %>">
+<img src="<%= @gym.img_url %>" height=400>
 <h1><%= @gym.name %></h1>
 <h2><%= @gym.address %></h2>
-<br><br>
+<br>
 <h3>Coaches:</h3>
 <ul>
     <% @gym.coaches.each do |c| %>
