--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -29,6 +29,7 @@
 
   <p>
     <%= f.label "Image URL" %><br>
+    <%# STRETCH GOAL: <%= f.file_field :img_url %> 
     <%= f.text_field :img_url %>
   </p>
 
