--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,12 +14,29 @@
  *= require_self
  */
 
+
+
+ body {
+  font-family: 'Open Sans Condensed';
+  padding: 20px 60px;
+  }
+
+  a {
+    text-decoration: none;
+    color: black;
+  }
+
+  * {
+  box-sizing: border-box;
+  }
+
  .header {
   height: 70px;
   width: 100%;
   display: flex;
   justify-content: space-between;
   margin-bottom: 25px;
+ }
 
   .logo-container {
     height: 100%;
@@ -34,12 +51,42 @@
     align-items: center;
     justify-content: flex-end;
     
-    .option {
-      padding: 10px 15px;
-      cursor: pointer;
-    }
   }
-}
+
+  .option {
+    padding: 10px 15px;
+    cursor: pointer;
+  }
+
+
+  .button {
+    min-width: 165px;
+    width: auto;
+    height: 50px;
+    letter-spacing: 0.5px;
+    line-height: 50px;
+    padding: 0 35px 0 35px;
+    font-size: 15px;
+    background-color: white;
+    color: black;
+    text-transform: uppercase;
+    font-family: 'Open Sans Condensed';
+    font-weight: bolder;
+    border: 1px solid black;
+    border-radius: 6px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+  }
+
+  .sign-up {
+    display: flex; 
+    flex-direction: column;
+    width: 380px;
+  }
+    .title {
+        margin: 10px 0;
+    }
 
 
 
@@ -48,10 +95,7 @@
 
 
 
-
-
-
-
+/* 
 //  .header {
 //     height: 70px;
 //     width: 100%;
@@ -79,4 +123,4 @@
 //   }
 // .content {
 //   margin-top: 10%;
-// }
+// } */
