--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <nav>
-    <div class='header'>
+    <div id='navbar'>
       <%= link_to "SWOLEMATES", root_path %>
       <div class='option'>
         <%= link_to "MY ACCOUNT", @member %>|
