--- a/app/views/gyms/show.html.erb
+++ b/app/views/gyms/show.html.erb
@@ -18,7 +18,7 @@
     <% end %>
 </ul>
     <%= form_for @membership do |f|%>
-        <%= f.hidden_field :member_id, value: session[:member_id] %> 
+        <%= f.hidden_field :member_id, value: @current_user %> 
         <%= f.hidden_field :gym_id,  value: @gym.id %>
         <%= f.submit "Enroll in this gym" %>
     <% end%>
