added delete member function attatched to member show page, added some styling to sign-up

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,20 +9,16 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <nav>
-    <div id='navbar'>
+    <div class='header'>
       <%= link_to "SWOLEMATES", root_path %>
       <div class='option'>
-        <%= link_to "MY ACCOUNT", @member %>|
+        <%= link_to "MY ACCOUNT", @member %> |
         <%= link_to "GYMS", gyms_path %> | 
         <%= link_to "COACHES", coaches_path %> | 
         <%= link_to "SIGN IN", signin_path %> | 
-        <%= link_to "SIGN UP", signup_path %> | 
+        <%= link_to "SIGN UP", signup_path %>
       </div>
     </div>
-  </nav>
-
-  <div class='content'></div>
     <body>      
       <%= yield %>
     </body>
