--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -32,3 +32,5 @@ Coach Reviews:
 </ul>
 
 <button><%= link_to "Edit profile", edit_member_path %></button>
+
+<%= button_to "delete account", @member, :method => :delete %>
