--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,6 @@
+@import "semantic-ui";
+@import "shared/mixins";
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
 
 $sub-color: grey;
 $main-color: black;
@@ -10,7 +13,8 @@ $main-color: black;
 
 .group {
   position: relative;
-  margin: 45px 0;
+  margin: 15px 0;
+
 
   .form-input {
     background: none;
@@ -34,6 +38,9 @@ $main-color: black;
     }
   }
 
+  input[type='password'] {
+    letter-spacing: 0.3em;
+  }
 
   .form-input-label {
     color: $sub-color;
@@ -50,9 +57,8 @@ $main-color: black;
     }
   }
 }
-
 body {
-  font-family: 'Open Sans Condensed';
+  font-family: 'Nunito Sans', sans-serif;
   padding: 20px 60px;
 }
 
@@ -70,18 +76,30 @@ box-sizing: border-box;
   display: flex;
   justify-content: space-between;
   margin-bottom: 25px;
+
+
+  .logo-container {
+    height: 100%;
+    width: 70px;
+  }
+
+  .options {
+    width: 53%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    .option {
+      padding: 10px 15px;
+      cursor: pointer;
+    }
+  }
 }
 
-.options {
-  width: 50%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.sign-up {
+.form {
   display: flex; 
+  margin: 0 auto;
   flex-direction: column;
   width: 380px;
 
@@ -90,4 +108,19 @@ box-sizing: border-box;
   }
 }
 
+.logo {
+  width: 120px;
+  height: 120px;
+  margin-top: -20px;
+}
+
+
+input:focus ~ .sign-in-label,
+input:not(:focus):valid ~ .sign-in-label{
+  top: 8px;
+  bottom: 10px;
+  left: 20px;
+  font-size: 11px;
+  opacity: 1;
+}
 
