added footer, added stylings to forms and buttons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,5 +31,11 @@
         </div>
       </div>     
       <%= yield %>
+      <div class="footer">
+        <%= link_to image_tag("icons/icons8-instagram.svg",{:class => "icon"}),(root_path) %>
+        <%= link_to image_tag("icons/icons8-facebook.svg",{:class => "icon"}),(root_path) %>
+        <%= link_to image_tag("icons/icons8-play-button.svg",{:class => "icon"}),(root_path) %>
+        <%= link_to image_tag("icons/icons8-twitter.svg",{:class => "icon"}),(root_path) %>
+      </div>
     </body>
 </html>
