--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -11,34 +11,34 @@
   <h1 class='title'>Sign Up</h1>
   <%= form_for @member do |f| %>
     <div class='group'>
-    <%= f.label :name, {:class => 'form-input-label'} %>
+    <%= f.label :name, {:class => 'shrink form-input-label'} %>
     <%= f.text_field :name, {:class => 'form-input'} %>
     </div>
     <div class='group'>
-      <%= f.label :email, {:class => 'form-input-label'} %>
+      <%= f.label :email, {:class => 'shrink form-input-label'} %>
       <%= f.text_field :email, {:class => 'form-input'} %>
     </div>
     <div class='group'>
-      <%= f.label :age, {:class => 'form-input-label'} %>
+      <%= f.label :age, {:class => 'shrink form-input-label'} %>
       <%= f.number_field :age, {:class => 'form-input'} %>
     </div>
     <div class='group'>
-      <%= f.label :address, {:class => 'form-input-label'} %>
+      <%= f.label :address, {:class => 'shrink form-input-label'} %>
       <%= f.text_field :address, {:class => 'form-input'} %>
     </div>
 
     <div class='group'>
-      <%= f.label "Image URL", {:class => 'form-input-label'} %>
+      <%= f.label "Image URL", {:class => 'shrink form-input-label'} %>
       <%# STRETCH GOAL: <%= f.file_field :img_url %> 
       <%= f.text_field :img_url, {:class => 'form-input'} %>
     </div>
 
     <div class='group'>
-      <%= f.label :password, {:class => 'form-input-label'} %>
+      <%= f.label :password, {:class => 'shrink form-input-label'} %>
       <%= f.password_field :password, {:class => 'form-input'} %>
     </div>
     <div class='group'>
-      <%= f.label :password_confirmation, {:class => 'form-input-label'} %>
+      <%= f.label :password_confirmation, {:class => 'shrink form-input-label'} %>
       <%= f.password_field :password_confirmation, {:class => 'form-input'} %>
     </div>
     <%= f.submit "Sign up", {:class => 'ui pink button'} %>
