--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,11 +33,13 @@
       <center>
       <%= yield %>
     </center>
-    <div class="footer">
+    <div class='space'>
+    </div>
+    <footer class="footer">
         <%= link_to image_tag("icons/icons8-instagram.svg",{:class => "icon"}),(root_path) %>
         <%= link_to image_tag("icons/icons8-facebook.svg",{:class => "icon"}),(root_path) %>
         <%= link_to image_tag("icons/icons8-play-button.svg",{:class => "icon"}),(root_path) %>
         <%= link_to image_tag("icons/icons8-twitter.svg",{:class => "icon"}),(root_path) %>
-      </div>
+      </footer>
     </body>
 </html>
