--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -3,38 +3,40 @@
       <%= flash[:error] %>
     </div>
 <% end %>
+<div class='form'>
+  <%= form_for @member do |f| %>
+    <div class='group'>
+    <%= f.label :name, {:class => 'shrink form-input-label'} %>
+    <%= f.text_field :name, {:class => 'form-input'} %>
+    </div>
+    <div class='group'>
+      <%= f.label :email, {:class => 'shrink form-input-label'} %>
+      <%= f.text_field :email, {:class => 'form-input'} %>
+    </div>
+    <div class='group'>
+      <%= f.label :age, {:class => 'shrink form-input-label'} %>
+      <%= f.number_field :age, {:class => 'form-input'} %>
+    </div>
+    <div class='group'>
+      <%= f.label :address, {:class => 'shrink form-input-label'} %>
+      <%= f.text_field :address, {:class => 'form-input'} %>
+    </div>
 
-<%= form_for @member do |f| %>
-  <p>
-  <%= f.label :name %><br>
-  <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </p>
-  <p>
-    <%= f.label :age %><br>
-    <%= f.number_field :age %>
-  </p>
-  <p>
-    <%= f.label :address %><br>
-    <%= f.text_field :address %>
-  </p>
+    <div class='group'>
+      <%= f.label "Image URL", {:class => 'shrink form-input-label'} %>
+      <%# STRETCH GOAL: <%= f.file_field :img_url %> 
+      <%= f.text_field :img_url, {:class => 'form-input'} %>
+    </div>
 
-  <p>
-    <%= f.label "Image URL" %><br>
-    <%= f.text_field :img_url %>
-  </p>
-
-  <p>
-    <%= f.label :password %><br>
-    <%= f.password_field :password %>
-  </p>
-  <p>
-    <%= f.label :password_confirmation %><br>
-    <%= f.password_field :password_confirmation %>
-  </p>
-  <%= f.submit %>
-<% end %>
+    <div class='group'>
+      <%= f.label :password, {:class => 'shrink form-input-label'} %>
+      <%= f.password_field :password, {:class => 'form-input'} %>
+    </div>
+    <div class='group'>
+      <%= f.label :password_confirmation, {:class => 'shrink form-input-label'} %>
+      <%= f.password_field :password_confirmation, {:class => 'form-input'} %>
+    </div>
+    <%= f.submit "Sign up", {:class => 'ui pink button'} %>
+  <% end %>
+</div>
 
